<resources>
    <string name="app_name">Logica</string>
    <string name="header">Conjunction (AND)</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="T">T</string>
    <string name="F">F</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="AB">A ^ B</string>
    <string name="submit">Submit</string>
</resources>
